log
Thu 14 Sep 2023 12:56:53 AM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
9e5670a
Thu 14 Sep 2023 12:58:19 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
24b57d1
Thu 14 Sep 2023 12:58:53 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
a234400
Thu 14 Sep 2023 01:20:30 AM UTC: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  4|7
total_score: 5/70
06b66ba
Thu 14 Sep 2023 01:20:38 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
affe1a9
Thu 14 Sep 2023 01:21:35 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|7
total_score: 5/70
f1067e3
Thu 14 Sep 2023 01:22:02 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
a12f4ef
Thu 14 Sep 2023 01:25:37 AM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  8|7
total_score: 5/70
e2bb751
Thu 14 Sep 2023 01:26:10 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
c7ca03c
Thu 14 Sep 2023 01:26:19 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b116c57
Thu 14 Sep 2023 01:26:28 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|7
total_score: 5/70
17dd699
Thu 14 Sep 2023 01:29:57 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|7
total_score: 5/70
64e312f
Thu 14 Sep 2023 01:31:35 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|7
total_score: 5/70
fcaf961
Thu 14 Sep 2023 01:33:16 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|7
total_score: 5/70
4063135
Thu 14 Sep 2023 01:34:54 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|7
total_score: 5/70
80af7f8
Thu 14 Sep 2023 01:35:33 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
06f46b6
Thu 14 Sep 2023 02:37:42 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:49:12: error: unused variable ‘newMap’ [-Werror=unused-variable]
   49 |   TreeMap* newMap=(TreeMap*)malloc(sizeof(TreeMap));
      |            ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
418d409
Thu 14 Sep 2023 02:38:03 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
ad04b7c
Thu 14 Sep 2023 07:56:06 PM UTC: 
 treemap.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:57:11: error: ‘TreeMap’ has no member named ‘r’
   57 |       tree->r;
      |           ^~
treemap.c:63:25: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   63 |       actual->left== key,value;
      |                         ^
treemap.c:63:7: error: statement with no effect [-Werror=unused-value]
   63 |       actual->left== key,value;
      |       ^~~~~~
treemap.c:49:9: error: unused variable ‘newPair’ [-Werror=unused-variable]
   49 |   Pair* newPair=(Pair*)malloc(sizeof(Pair));
      |         ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3b8806d
Thu 14 Sep 2023 07:56:29 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  11|6
total_score: 15/70
a05f832
Thu 14 Sep 2023 09:35:55 PM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:57:11: error: ‘TreeMap’ has no member named ‘r’
   57 |       tree->r;
      |           ^~
treemap.c:63:25: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   63 |       actual->left== key,value;
      |                         ^
treemap.c:63:7: error: statement with no effect [-Werror=unused-value]
   63 |       actual->left== key,value;
      |       ^~~~~~
treemap.c:49:9: error: unused variable ‘newPair’ [-Werror=unused-variable]
   49 |   Pair* newPair=(Pair*)malloc(sizeof(Pair));
      |         ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4753938
Thu 14 Sep 2023 09:44:09 PM UTC: 
 treemap.c | 27 +++++++++++++++++++--------
 1 file changed, 19 insertions(+), 8 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:50:23: error: too few arguments to function ‘createTreeNode’
   50 |   TreeNode* newNode = createTreeNode(newPair);
      |                       ^~~~~~~~~~~~~~
treemap.c:29:12: note: declared here
   29 | TreeNode * createTreeNode(void* key, void * value) {
      |            ^~~~~~~~~~~~~~
Compilation failed
cf0727c
Thu 14 Sep 2023 09:44:42 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
test.c: In function ‘insertTreeMap’:
treemap.c:50:23: error: ‘*newPair.value’ is used uninitialized [-Werror=uninitialized]
   50 |   TreeNode* newNode = createTreeNode(newPair->key,newPair->value);
      |                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
treemap.c:50:23: error: ‘*newPair.key’ is used uninitialized [-Werror=uninitialized]
cc1: all warnings being treated as errors
Compilation failed
3228f6e
